@@ -87,6 +87,14 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="47~rc" date="2024-08-31" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Added brand colors !178 (Brage Fuglseth)</li>
+        </ul>
+      </description>
+    </release>
     <release version="47~beta" date="2024-08-02" type="development">
       <description>
         <ul>
