@@ -1,3 +1,7 @@
+Overview of changes in gnome-calculator 47.rc
+    * Updated translations
+    * Added brand colors !178 (Brage Fuglseth)
+
 Overview of changes in gnome-calculator 47.beta
     * Updated translations
     * Fix hex string conversion for bitwise operator !177 (Xiong Nandi)
